--- a/index.html
+++ b/index.html
@@ -25,16 +25,6 @@
     </section>
     <section class="elements">
       <ul class="cards">
-        <template id="card__template">
-          <li class="card">
-            <img class="card__photo">
-            <button class="card__trash" aria-label="trash"></button>
-            <div class="card__info">
-              <h2 class="card__title"></h2>
-              <button class="card__like" aria-label="like"></button>
-            </div>
-          </li>
-        </template>
       </ul>
     </section>
   </main>
@@ -72,6 +62,17 @@
     </div>
   </section>
 </div>
+<template id="card__template">
+  <li class="card">
+    <img class="card__photo">
+    <button class="card__trash" aria-label="trash"></button>
+    <div class="card__info">
+      <h2 class="card__title"></h2>
+      <button class="card__like" aria-label="like"></button>
+    </div>
+  </li>
+</template>
+<script src="./scripts/cards.js"></script>
 <script src="./scripts/index.js"></script>
 </body>
 </html>
