--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
         <button class="popup__close-button popup__close-button_edit-popup" type="button"></button>
         <form class="popup__form popup__form_edit" name="edit-form" novalidate>
           <h3 class="popup__title">Редактировать профиль</h3>
-          <input class="popup__input popup__input_name" type="text" name="name-field" minlength="2" maxlength="40" required>
+          <input class="popup__input popup__input_name" placeholder="Имя" type="text" name="name-field" minlength="2" maxlength="40" required>
           <span class="popup__error_visible" id="name-field-error"></span>
-          <input class="popup__input popup__input_description" type="text" name="description-field" minlength="2" maxlength="200" required>
+          <input class="popup__input popup__input_description" placeholder="Род занятий" type="text" name="description-field" minlength="2" maxlength="200" required>
           <span class="popup__error_visible" id="description-field-error"></span>
           <button class="popup__submit" type="submit">Сохранить</button>
         </form>
