--- a/index.html
+++ b/index.html
@@ -76,8 +76,6 @@
     </div>
   </li>
 </template>
-<script src="./scripts/cards.js"></script>
-<script src="./scripts/validate.js"></script>
-<script src="./scripts/index.js"></script>
+<script type="module" src="./scripts/index.js"></script>
 </body>
 </html>
