--- a/src/index.html
+++ b/src/index.html
@@ -12,7 +12,7 @@
   </header>
   <main class="content">
     <section class="profile">
-      <img class="profile__avatar" src='../images/profile__avatar.png' alt="Аватар">
+      <img class="profile__avatar" src='images/profile__avatar.png' alt="Аватар">
       <div class="profile__info">
         <div class="profile__text">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
