make layout of delete confirmation popup and hover of avatar

--- a/src/index.html
+++ b/src/index.html
@@ -95,7 +95,10 @@
     <button class="card__trash" aria-label="trash"></button>
     <div class="card__info">
       <h2 class="card__title"></h2>
-      <button class="card__like" aria-label="like"></button>
+      <div class ="card__likes">
+        <button class="card__like" aria-label="like"></button>
+        <p class="card__like-counter">6</p>
+      </div>
     </div>
   </li>
 </template>
