--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
   <main class="content">
     <section class="profile">
       <div class="profile__avatar-container">
-        <img class="profile__avatar" src="<%=require('./images/profile__avatar.png')%>"  alt="Аватар">
+        <img class="profile__avatar" src="<%=require('./images/profile__avatar.png')%>" alt="Аватар">
         <button class="profile__avatar-button"></button>
       </div>
       <div class="profile__info">
@@ -39,9 +39,11 @@
         <button class="popup__close-button popup__close-button_edit-popup" type="button"></button>
         <form class="popup__form popup__form_edit" name="edit-form" novalidate>
           <h3 class="popup__title">Редактировать профиль</h3>
-          <input class="popup__input popup__input_name" placeholder="Имя" type="text" name="name" id="name-field" minlength="2" maxlength="40" required>
+          <input class="popup__input popup__input_name" placeholder="Имя" type="text" name="name" id="name-field"
+                 minlength="2" maxlength="40" required>
           <span class="popup__error_visible" id="name-field-error"></span>
-          <input class="popup__input popup__input_description" placeholder="Род занятий" type="text" name="description" id="description-field" minlength="2" maxlength="200" required>
+          <input class="popup__input popup__input_description" placeholder="Род занятий" type="text" name="description"
+                 id="description-field" minlength="2" maxlength="200" required>
           <span class="popup__error_visible" id="description-field-error"></span>
           <button class="popup__submit" type="submit">Сохранить</button>
         </form>
@@ -52,9 +54,11 @@
         <button class="popup__close-button popup__close-button_add-popup" type="button"></button>
         <form class="popup__form popup__form_add" name="add-form" novalidate>
           <h3 class="popup__title popup__title_add">Новое место</h3>
-          <input class="popup__input popup__input_image-title" placeholder="Название" type="text" name="name" id="image-title" minlength="2" maxlength="30" required>
+          <input class="popup__input popup__input_image-title" placeholder="Название" type="text" name="name"
+                 id="image-title" minlength="2" maxlength="30" required>
           <span class="popup__error" id="image-title-error"></span>
-          <input class="popup__input popup__input_link-of-image" placeholder="Ссылка на картинку" type="url" name="link" id="link-of-image" required>
+          <input class="popup__input popup__input_link-of-image" placeholder="Ссылка на картинку" type="url" name="link"
+                 id="link-of-image" required>
           <span class="popup__error" id="link-of-image-error"></span>
           <button class="popup__submit popup__submit_add" type="submit">Создать</button>
         </form>
@@ -79,9 +83,10 @@
     <div class="popup popup_new-avatar">
       <div class="popup__container">
         <button class="popup__close-button" type="button"></button>
-        <div class="popup__form">
+        <div class="popup__form popup__form_avatar">
           <h3 class="popup__title">Обновить аватар</h3>
-          <input class="popup__input popup__input_link-of-image" placeholder="Ссылка на картинку" type="url" name="link" id="link-of-image" required>
+          <input class="popup__input popup__input_link-of-image" placeholder="Ссылка на картинку" type="url" name="link"
+                 id="link-of-image" required>
           <span class="popup__error" id="link-of-image-error"></span>
           <button class="popup__submit" type="submit">Сохранить</button>
         </div>
@@ -95,7 +100,7 @@
     <button class="card__trash" aria-label="trash"></button>
     <div class="card__info">
       <h2 class="card__title"></h2>
-      <div class ="card__likes">
+      <div class="card__likes">
         <button class="card__like" aria-label="like"></button>
         <p class="card__like-counter">6</p>
       </div>
