--- a/src/index.html
+++ b/src/index.html
@@ -102,7 +102,7 @@
       <h2 class="card__title"></h2>
       <div class="card__likes">
         <button class="card__like" aria-label="like"></button>
-        <p class="card__like-counter">6</p>
+        <p class="card__like-counter"></p>
       </div>
     </div>
   </li>
