fix delete-button functions

--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
           <input class="popup__input popup__input_link-of-image" placeholder="Ссылка на картинку" type="url" name="link"
                  id="link-of-image" required>
           <span class="popup__error" id="link-of-image-error"></span>
-          <button class="popup__submit popup__submit_add" type="submit">Создать</button>
+          <button class="popup__submit" type="submit">Создать</button>
         </form>
       </div>
     </div>
@@ -85,7 +85,7 @@
         <button class="popup__close-button" type="button"></button>
         <div class="popup__form popup__form_avatar">
           <h3 class="popup__title">Обновить аватар</h3>
-          <input class="popup__input popup__input_link-of-image" placeholder="Ссылка на картинку" type="url" name="link"
+          <input class="popup__input popup__input_avatar" placeholder="Ссылка на картинку" type="url" name="avatar"
                  id="link-of-image" required>
           <span class="popup__error" id="link-of-image-error"></span>
           <button class="popup__submit" type="submit">Сохранить</button>
