fix avatar update

--- a/src/index.html
+++ b/src/index.html
@@ -83,13 +83,13 @@
     <div class="popup popup_new-avatar">
       <div class="popup__container">
         <button class="popup__close-button" type="button"></button>
-        <div class="popup__form popup__form_avatar">
+        <form class="popup__form popup__form_avatar">
           <h3 class="popup__title">Обновить аватар</h3>
           <input class="popup__input popup__input_avatar" placeholder="Ссылка на картинку" type="url" name="avatar"
                  id="link-of-image" required>
           <span class="popup__error" id="link-of-image-error"></span>
           <button class="popup__submit" type="submit">Сохранить</button>
-        </div>
+        </form>
       </div>
     </div>
   </section>
